--- a/pyVerein/members/templates/members/detail.html
+++ b/pyVerein/members/templates/members/detail.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-md-12">
         <div class="x_panel">
             <div class="x_title">
                 <h1>{{ member.get_full_name }}</h1>
