--- a/pyVerein/members/templates/members/index.html
+++ b/pyVerein/members/templates/members/index.html
@@ -1,6 +1,6 @@
 {%  load i18n %}
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-md-12">
         <div class="x_panel">
             <div class="x_content">
                 <table id="memberslist" class="table table-bordered table-striped table-hover dataTable" cellspacing="0"
