--- a/pyVerein/app/templates/app/base.html
+++ b/pyVerein/app/templates/app/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load i18n %}
+{% load menu %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,13 +17,7 @@
     <link rel="stylesheet" href="{% static 'app/vendors/iCheck/skins/flat/green.css' %}">
     <!-- Theme style -->
     <link rel="stylesheet" href="{% static 'app/build/css/custom.min.css' %}">
-    <!-- DataTables -->
-    <link rel="stylesheet"
-          href="{% static 'app/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css' %}">
-    <link href="{% static 'app/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css" rel="stylesheet' %}">
-    <link href="{% static 'app/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" rel="stylesheet' %}">
-    <link href="{% static 'app/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css" rel="stylesheet' %}">
-    <link href="{% static 'app/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css" rel="stylesheet' %}">
+
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="{% static 'app/css/app.css' %}">
@@ -33,7 +28,8 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    {% block head %}
+    {% endblock %}
 </head>
 <body class="nav-md">
 <div class="container body">
@@ -54,11 +50,11 @@
                     <div class="menu_section">
                         <h3>{% trans 'Members' %}</h3>
                         <ul class="nav side-menu">
-                            <li id="members"><a><i class="fa fa-user"></i> {% trans 'Members' %} <span
+                            <li class="{% url_class 'members:list' 'active'%}"><a><i
+                                    class="fa fa-user"></i> {% trans 'Members' %} <span
                                     class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="javascript:void(0);" onclick="ajaxlink($(this))"
-                                           data-href="{% url 'members:index' %}">
+                                    <li class="{% url_class 'members:list' 'current-page' %}"><a href="{% url 'members:list' %}">
                                         {% trans 'List' %}
                                     </a></li>
 
@@ -102,18 +98,25 @@
         <div class="right_col" role="main">
             <div class="page-title">
                 <div class="title_left">
-                    <h3 id="title"></h3>
+                    <h3 id="title">
+                        {% block title %}
+                        {% endblock %}
+                    </h3>
                 </div>
             </div>
             <div class="clearfix"></div>
-            <div id="maincontent"></div>
+            <div id="maincontent">
+                {% block content %}
+                {% endblock %}
+            </div>
         </div>
         <!-- /page content -->
 
         <!-- footer content -->
         <footer>
             <div class="pull-right">
-                pyVerein by Jannik Heuer
+                pyVerein by Jannik Heuer - Theme based on Gentelella - Bootstrap Admin Template by <a
+                    href="https://colorlib.com">Colorlib</a>
             </div>
             <div class="clearfix"></div>
         </footer>
@@ -131,55 +134,13 @@
 <script src="{% static 'app/vendors/fastclick/lib/fastclick.js' %}"></script>
 <!-- iCheck -->
 <script src="{% static 'app/vendors/iCheck/icheck.min.js' %}"></script>
-<!-- Datatables -->
-<script src="{% static 'app/vendors/datatables.net/js/jquery.dataTables.min.js' %}"></script>
-<script src="{% static 'app/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js' %}"></script>
-<script src="{% static 'app/vendors/datatables.net-buttons/js/dataTables.buttons.min.js' %}"></script>
-<script src="{% static 'app/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js' %}"></script>
-<script src="{% static 'app/vendors/datatables.net-buttons/js/buttons.flash.min.js' %}"></script>
-<script src="{% static 'app/vendors/datatables.net-buttons/js/buttons.html5.min.js' %}"></script>
-<script src="{% static 'app/vendors/datatables.net-buttons/js/buttons.print.min.js' %}"></script>
-<script src="{% static 'app/vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js' %}"></script>
-<script src="{% static 'app/vendors/datatables.net-keytable/js/dataTables.keyTable.min.js' %}"></script>
-<script src="{% static 'app/vendors/datatables.net-responsive/js/dataTables.responsive.min.js' %}"></script>
-<script src="{% static 'app/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js' %}"></script>
-<script src="{% static 'app/vendors/datatables.net-scroller/js/dataTables.scroller.min.js' %}"></script>
-<script src="{% static 'app/vendors/jszip/dist/jszip.min.js' %}"></script>
-<script src="{% static 'app/vendors/pdfmake/build/pdfmake.min.js' %}"></script>
-<script src="{% static 'app/vendors/pdfmake/build/vfs_fonts.js' %}"></script>
+
 <!-- Custom Theme Scripts -->
 <script src="{% static 'app/build/js/custom.min.js' %}"></script>
-<!-- Base64 -->
-<script src="{% static 'app/js/base64.js' %}"></script>
-
-<!-- Ajax content call -->
-<script type="text/javascript">
-    var link;
-    var last_link;
-
-    function ajaxlink(sender) {
-        link = sender;
-        var request = $.get(
-            link.data("href")
-        );
-        request.done(
-            function (response) {
-                if (last_link) {
-                    last_link.parents("li").removeClass("active")
-                }
-                $("#maincontent").html(Base64.decode(response.data));
-                if (response.parent_menu) {
-                    $("#" + response.parent_menu).addClass("active");
-                } else {
-                    link.parents("li").addClass("active");
-                }
-                $("#title").html(response.title ? response.title : "")
-
-                last_link = link;
-
-            }
-        );
-    }
+<script type="application/javascript">
+    $("li.active").children("ul").slideDown();
 </script>
+{% block foot %}
+{% endblock %}
 </body>
 </html>
