--- a/pyVerein/members/templates/members/member_edit.html
+++ b/pyVerein/members/templates/members/member_edit.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="{% static 'app/vendors/datepicker/css/bootstrap-datepicker3.css' %}">
     <!-- iCheck style -->
     <link rel="stylesheet" href="{% static 'app/vendors/iCheck/skins/square/blue.css' %}">
+    <!-- Members style -->
+    <link rel="stylesheet" href="{% static 'members/members.css' %}">
 {% endblock %}
 
 {% block title %}
