--- a/pyVerein/members/templates/members/member_list.html
+++ b/pyVerein/members/templates/members/member_list.html
@@ -1,6 +1,6 @@
 {% extends 'app/base.html' %}
 {% load i18n %}
-{% load staticfiles%}
+{% load staticfiles %}
 
 {% block head %}
     <!-- DataTables -->
@@ -10,6 +10,8 @@
     <link href="{% static 'app/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" rel="stylesheet' %}">
     <link href="{% static 'app/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css" rel="stylesheet' %}">
     <link href="{% static 'app/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css" rel="stylesheet' %}">
+    <!-- Members style -->
+    <link rel="stylesheet" href="{% static 'members/members.css' %}">
 {% endblock %}
 
 {% block title %}
