--- a/pyVerein/app/templates/registration/login.html
+++ b/pyVerein/app/templates/registration/login.html
@@ -1,85 +1,74 @@
 {% load static %}
+{% load i18n %}
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <!-- Meta, title, CSS, favicons, etc. -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>pyVerein</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" href="{% static 'app/bower_components/bootstrap/dist/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'app/vendors/bootstrap/dist/css/bootstrap.min.css' %}">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="{% static 'app/bower_components/font-awesome/css/font-awesome.min.css' %}">
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="{% static 'app/bower_components/Ionicons/css/ionicons.min.css' %}">
+    <link rel="stylesheet" href="{% static 'app/vendors/font-awesome/css/font-awesome.min.css' %}">
     <!-- Theme style -->
-    <link rel="stylesheet" href="{% static 'app/dist/css/AdminLTE.min.css' %}">
-    <!-- AdminLTE Skins. Choose a skin from the css/skins
-         folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="{% static 'app/dist/css/skins/skin-red.min.css' %}">
+    <link rel="stylesheet" href="{% static 'app/build/css/custom.min.css' %}">
+    <link rel="stylesheet" href="{% static 'app/vendors/animate.css/animate.min.css' %}">
 
     <!-- Custom Styles -->
-    <link rel="stylesheet" href="{% static 'app/login.css' %}">
-    <link rel="stylesheet" href="{% static 'app/app.css' %}">
+    <!--<link rel="stylesheet" href="{% static 'app/login.css' %}">
+    <link rel="stylesheet" href="{% static 'app/app.css' %}">-->
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Google Font -->
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
-<body>
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <div class="box">
-                <div class="box-header">
-                    PyVerein
-                </div>
-                <div class="box-body">
-                    {% if form.errors %}
-                        <div class="alert alert-danger">Your username and password didn't match. Please try again.</div>
-                    {% endif %}
 
-                    {% if next %}
-                        {% if user.is_authenticated %}
-                            <div class="alert alert-danger">Your account doesn't have access to this page. To proceed,
-                                please login with an account that has access.
-                            </div>
-                        {% endif %}
-                    {% endif %}
-                    <h3>Please Log In</h3>
-                    <form role="form" method="post" action="{% url 'login' %}" class="form-horizontal">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label class="control-label col-md-2" for="username">Username</label>
-                            <div class="col-md-10">
-                                <input type="text" id="username" name="username" placeholder="Username"
-                                       class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-md-2" for="username">Password</label>
-                            <div class="col-md-10">
-                                <input type="password" id="password" name="password" placeholder="Password"
-                                       class="form-control">
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <div class="controls">
-                                <button type="submit" class="btn">Login</button>
-                                <input type="hidden" name="next" value="{{ next }}"/>
-                            </div>
-                        </div>
-                    </form>
+<body class="login">
+
+<div class="login_wrapper">
+    <div class="animate form login_form">
+        <section class="login_content">
+            {% if form.errors %}
+                <div class="alert alert-danger">{% trans 'Your username and password didnt match. Please try again.' %}</div>
+            {% endif %}
+
+            {% if next %}
+                {% if user.is_authenticated %}
+                    <div class="alert alert-danger">{% trans 'Your account doesnt have access to this page. To proceed, please login with an account that has access.' %}
+                    </div>
+                {% endif %}
+            {% endif %}
+
+            <form role="form" method="post" action="{% url 'login' %}" class="form-horizontal">
+                {% csrf_token %}
+                <h1>{% trans 'Log In' %}</h1>
+                <div>
+                    <input type="text" id="username" name="username" placeholder="{% trans 'Username' %}"
+                           class="form-control">
                 </div>
-            </div>
-        </div>
+                <div>
+                    <input type="password" id="password" name="password" placeholder="{% trans 'Password' %}"
+                           class="form-control">
+                </div>
+
+                <div>
+                    <button type="submit" class="btn">{% trans 'Login' %}</button>
+                    <input type="hidden" name="next" value="{{ next }}"/>
+                </div>
+
+
+                <div>
+                    pyVerein by Jannik Heuer - Theme based on Gentelella - Bootstrap Admin Template by <a
+                        href="https://colorlib.com">Colorlib</a>
+                </div>
+            </form>
+        </section>
     </div>
 </div>
+
+</body>
+</html>
