--- a/pyVerein/app/static/app/css/login.css
+++ b/pyVerein/app/static/app/css/login.css
@@ -1,7 +1,3 @@
-.container{
-    margin-top: 100px;
+.login img{
+    margin-bottom: 50px;
 }
-.main {
-    max-width: 500px;
-    margin: 0 auto;
-  }
