--- a/pyVerein/app/templates/app/base.html
+++ b/pyVerein/app/templates/app/base.html
@@ -37,8 +37,7 @@
         <div class="col-md-3 left_col menu_fixed">
             <div class="left_col scroll-view">
                 <div class="navbar nav_title" style="border: 0;">
-                    <a href="{% url 'app:index' %}" class="site_title"><i class="fa fa-paw"></i>
-                        <span>pyVerein</span></a>
+                    <a href="{% url 'app:index' %}" class="site_title"> <img src="{% static 'app/images/logo_white.png' %}" /></a>
                 </div>
 
                 <div class="clearfix"></div>
