--- a/pyVerein/members/templates/members/member_form_fields.html
+++ b/pyVerein/members/templates/members/member_form_fields.html
@@ -103,6 +103,43 @@
     <div class="col-md-3 field-title">{% trans 'Direct debit reference' %}</div>
     <div class="col-md-5 value">{% render_field form.debit_reference class+="form-control" %}<span class="help-block with-errors"></span></div>
 </div>
-<div class="row">
+
+
+{% if global_preferences.Members__show_additional_field_1 or global_preferences.Members__show_additional_field_2 or global_preferences.Members__show_additional_field_3 or global_preferences.Members__show_additional_field_4 or global_preferences.Members__show_additional_field_5 %}
+<div class="page-header">
+    {% trans 'Additional Information' %}
+</div>
+{% endif %}
+{% if global_preferences.Members__show_additional_field_1 %}
+<div class="form-group">
+    <div class="col-md-3 field-title">{% trans 'Additional field 1' %}</div>
+    <div class="col-md-5 value">{% render_field form.field_1 class+="form-control" %}<span class="help-block with-errors"></span></div>
+</div>
+{% endif %}
+{% if global_preferences.Members__show_additional_field_2 %}
+<div class="form-group">
+    <div class="col-md-3 field-title">{% trans 'Additional field 2' %}</div>
+    <div class="col-md-5 value">{% render_field form.field_2 class+="form-control" %}<span class="help-block with-errors"></span></div>
+</div>
+{% endif %}
+{% if global_preferences.Members__show_additional_field_3 %}
+<div class="form-group">
+    <div class="col-md-3 field-title">{% trans 'Additional field 3' %}</div>
+    <div class="col-md-5 value">{% render_field form.field_3 class+="form-control" %}<span class="help-block with-errors"></span></div>
+</div>
+{% endif %}
+{% if global_preferences.Members__show_additional_field_4 %}
+<div class="form-group">
+    <div class="col-md-3 field-title">{% trans 'Additional field 4' %}</div>
+    <div class="col-md-5 value">{% render_field form.field_4 class+="form-control" %}<span class="help-block with-errors"></span></div>
+</div>
+{% endif %}
+{% if global_preferences.Members__show_additional_field_5 %}
+<div class="form-group">
+    <div class="col-md-3 field-title">{% trans 'Additional field 5' %}</div>
+    <div class="col-md-5 value">{% render_field form.field_5 class+="form-control" %}<span class="help-block with-errors"></span></div>
+</div>
+{% endif %}
+<div class="form-group">
     <input type="submit" value="Send" />
 </div>
