Localization for additional fields

--- a/pyVerein/members/templates/members/member_form_fields.html
+++ b/pyVerein/members/templates/members/member_form_fields.html
@@ -141,5 +141,5 @@
 </div>
 {% endif %}
 <div class="form-group">
-    <input type="submit" value="Send" />
+    <input type="submit" value="{% trans 'Save' %}" />
 </div>
