--- a/pyVerein/members/templates/members/member_form_fields.html
+++ b/pyVerein/members/templates/members/member_form_fields.html
@@ -141,5 +141,10 @@
 </div>
 {% endif %}
 <div class="form-group">
-    <input type="submit" value="{% trans 'Save' %}" />
+    <div class="col-md-2 col-md-offset-3">
+        <input type="submit" class="btn btn-success btn-block" value="{% trans 'Save' %}" />
+    </div>
+    <div class="col-md-2 col-md-offset-1">
+        <input type="button" class="btn btn-danger btn-block" value="{% trans 'Cancel' %}" />
+    </div>
 </div>
