--- a/pyVerein/members/templates/members/member_form_fields.html
+++ b/pyVerein/members/templates/members/member_form_fields.html
@@ -145,6 +145,6 @@
         <input type="submit" class="btn btn-success btn-block" value="{% trans 'Save' %}" />
     </div>
     <div class="col-md-2 col-md-offset-1">
-        <input type="button" class="btn btn-danger btn-block" value="{% trans 'Cancel' %}" />
+        <a href="{% url 'members:list' %}" class="btn btn-danger btn-block">{% trans 'Cancel' %}</a>
     </div>
 </div>
