--- a/pyVerein/members/templates/members/member_detail.html
+++ b/pyVerein/members/templates/members/member_detail.html
@@ -17,7 +17,7 @@
         <div class="col-md-12">
             <div class="x_panel">
                 <div class="x_title">
-                    <h1>{{ member.get_full_name }}</h1>
+                    <h1>{{ member.get_full_name }} <small><a href="{% url 'members:edit' member.pk %}"><span class="glyphicon glyphicon-pencil"></span></a></small></h1>
                 </div>
                 <div class="x_content data">
                     <div class="page-header">
