--- a/pyVerein/finance/templates/finance/impersonal/create.html
+++ b/pyVerein/finance/templates/finance/impersonal/create.html
@@ -7,6 +7,7 @@
 {% block head %}
     <!-- iCheck style -->
     <link rel="stylesheet" href="{% static 'app/vendors/iCheck/skins/square/blue.css' %}">
+
 {% endblock %}
 
 {% block title %}
@@ -18,7 +19,7 @@
         <div class="col-md-12">
             <div class="x_panel">
                 <div class="x_content data">
-                    <form action="{% url 'finance:impersonal_create' %}" method="POST" class="form-horizontal" data-toggle="validator">
+                    <form action="{% url 'finance:impersonal_create' %}" method="POST" class="form-horizontal" data-toggle="validator" id="form">
                         {% csrf_token %}
                         <div class="page-header">
                             {% trans 'Impersonal account' %}
@@ -35,7 +36,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-3 field-title">{% trans 'Impersonal account number' %}</div>
-                            <div class="col-md-5 value ">{% render_field form.number class+="form-control" %}<span class="help-block with-errors"></span></div>
+                            <div class="col-md-5 value ">{% render_field form.number class+="form-control" data-next="id_name" %}<span class="help-block with-errors"></span></div>
                         
                         </div>
                         <div class="form-group">
@@ -71,4 +72,11 @@
     </script> 
     <!-- Validator -->
     <script src="{% static 'app/vendors/bootstrap-validator/dist/validator.min.js' %}"></script>
+
+    <!-- Keys -->
+    <script src="{% static 'app/js/keys.js' %}"></script>
+    <script>
+        $('#form').saveOnTimes();
+        $('#form').nextOnEnter();
+    </script>
 {% endblock %}
