--- a/pyVerein/finance/templates/finance/creditor/detail.html
+++ b/pyVerein/finance/templates/finance/creditor/detail.html
@@ -23,4 +23,7 @@
                 </div>
             </div>
         </div>
-    </div>{% endblock %}
+    </div>
+{% endblock %}
+{% block foot %}
+{% endblock %}
