--- a/pyVerein/finance/templates/finance/creditor/edit.html
+++ b/pyVerein/finance/templates/finance/creditor/edit.html
@@ -19,14 +19,15 @@
                 <h1>{{ creditor.number }} {{ creditor.name }}</h1>
             </div>
             <div class="x_content data">
-                <form action="{% url 'finance:creditor_edit' creditor.pk %}" method="POST" class="form-horizontal" data-toggle="validator">
+                <form action="{% url 'finance:creditor_edit' creditor.pk %}" method="POST" class="form-horizontal" data-toggle="validator" id="form">
                     {% csrf_token %}
                     <div class="page-header">
                         {% trans 'Creditor' %}
                     </div>
                     <div class="form-group">
                         <div class="col-md-3 field-title">{% trans 'Creditor name' %}</div>
-                        <div class="col-md-5 value">{% render_field form.name class+="form-control" %}
+                        <div class="col-md-5 value">
+                            {% render_field form.name class+="form-control" %}
                             <span class="help-block with-errors"></span>
                         </div>
                     </div>
@@ -36,7 +37,7 @@
                             <input type="submit" class="btn btn-success btn-block" value="{% trans 'Save' %}" />
                         </div>
                         <div class="col-md-2 col-md-offset-1">
-                            <a href="{% url 'finance:creditor_list' %}" class="btn btn-danger btn-block">{% trans 'Cancel' %}</a>
+                            <a href="{% url 'finance:creditor_detail' pk=creditor.pk %}" class="btn btn-danger btn-block">{% trans 'Cancel' %}</a>
                         </div>
                     </div>
                 </form>
@@ -58,4 +59,10 @@
             radioClass: 'iradio_square-blue',
         });
     </script> 
+    <!-- Keys -->
+    <script src="{% static 'app/js/keys.js' %}"></script>
+    <script>
+        $('#form').saveOnTimes();
+        $('#form').nextOnEnter();
+    </script>
 {% endblock %}
