--- a/pyVerein/finance/templates/finance/debitor/edit.html
+++ b/pyVerein/finance/templates/finance/debitor/edit.html
@@ -19,7 +19,7 @@
                 <h1>{{ debitor.number }} {{ debitor.name }}</h1>
             </div>
             <div class="x_content data">
-                <form action="{% url 'finance:debitor_edit' debitor.pk %}" method="POST" class="form-horizontal" data-toggle="validator">
+                <form action="{% url 'finance:debitor_edit' debitor.pk %}" method="POST" class="form-horizontal" data-toggle="validator" id="form">
                     {% csrf_token %}
                     <div class="page-header">
                         {% trans 'Debitor' %}
@@ -36,7 +36,7 @@
                             <input type="submit" class="btn btn-success btn-block" value="{% trans 'Save' %}" />
                         </div>
                         <div class="col-md-2 col-md-offset-1">
-                            <a href="{% url 'finance:debitor_list' %}" class="btn btn-danger btn-block">{% trans 'Cancel' %}</a>
+                            <a href="{% url 'finance:debitor_detail' pk=debitor.pk %}" class="btn btn-danger btn-block">{% trans 'Cancel' %}</a>
                         </div>
                     </div>
                 </form>
@@ -58,4 +58,10 @@
             radioClass: 'iradio_square-blue',
         });
     </script> 
+    <!-- Keys -->
+    <script src="{% static 'app/js/keys.js' %}"></script>
+    <script>
+        $('#form').saveOnTimes();
+        $('#form').nextOnEnter();
+    </script>
 {% endblock %}
